5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1585_2895.log
== TEST (2019-03-26 10:55:00) 
-- CODE:
var = float(input("quantidade de jogos"))
vU = 100
frete = 40
preço_total = (var * vU) frete

print(preço_total)

-- ERROR:
File "XXXX", line 4
    preço_total = (var * vU) frete
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:09) 
-- CODE:
var = float(input("quantidade de jogos"))
vU = 100
frete = 40
preçototal = (var * vU) frete

print(preço_total)

-- ERROR:
File "XXXX", line 4
    preçototal = (var * vU) frete
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:19) 
-- CODE:
var = float(input("quantidade de jogos"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preço_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(preço_total)
NameError: name 'preço_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:33) 
-- CODE:
var = float(input("quantidade de jogos"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preço_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(preço_total)
NameError: name 'preço_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:54) 
-- CODE:
var = float(input("qual quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preço_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(preço_total)
NameError: name 'preço_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:56:02) 
-- CODE:
var = float(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preço_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(preço_total)
NameError: name 'preço_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:56:48) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preço_total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(preço_total)
NameError: name 'preço_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:16) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:57:29) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.169993
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:39) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:57:44) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.149343
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:46) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:53) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:57:59) 
-- CODE:
var = float(input("qual quantidade de jogos a serem encomendados?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.235773
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:32) 
-- CODE:
var = float(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:58:40) 
-- CODE:
var = float(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.186337
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:59:37) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:59:43) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.21148
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:03) 
-- CODE:
var = float(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(int(preçototal))

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:00:09) 
-- CODE:
var = float(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(int(preçototal))

-- EXECUTION TIME:
0.146683
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:56) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:09) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:17) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:01:32) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete

print(preçototal)

-- EXECUTION TIME:
0.133199
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:44) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete
print(preçototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:01:49) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
preçototal = (var * vU) + frete
print(preçototal)

-- EXECUTION TIME:
0.150242
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:03:09) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
precototal = (var * vU) + frete
print(precototal)

-- OUTPUT:
1240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:03:14) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
vU = 100
frete = 40
precototal = (var * vU) + frete
print(precototal)

-- EXECUTION TIME:
0.191985
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:10) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
int(input("qual o valor do jogo?"))
int(input("qual o valor do frete?"))

vU = 100
frete = 40
precototal = (var * vU) + frete
print(precototal)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:05:31) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
int(input("qual o valor do jogo?"))
int(input("qual o valor do frete?"))

vU = 100
frete = 40
precototal = (var * vU) + frete
print(precototal)

-- EXECUTION TIME:
0.184734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:05:47) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
int(input("qual o valor do jogo?"))
int(input("qual o valor do frete?"))

precototal = (var * vU) + frete
print(precototal)

-- EXECUTION TIME:
0.154847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:49) 
-- CODE:
var = int(input("qual a quantidade de jogos?"))
var2 = int(input("qual o valor do jogo?"))
var3 = int(input("qual o valor do frete?"))

precototal = (var1 * var2) + var3
print(precototal)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:15) 
-- CODE:
var1 = int(input("qual a quantidade de jogos?"))
var2 = int(input("qual o valor do jogo?"))
var3 = int(input("qual o valor do frete?"))

precototal = (var1 * var2) + var3
print(precototal)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:07:27) 
-- CODE:
var1 = int(input("qual a quantidade de jogos?"))
var2 = int(input("qual o valor do jogo?"))
var3 = int(input("qual o valor do frete?"))

precototal = (var1 * var2) + var3
print(precototal)

-- EXECUTION TIME:
0.187098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 2, in <module>
    var2 = int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:53) 
-- CODE:
var1 = float(input("qual a quantidade de jogos?"))
var2 = float(input("qual o valor do jogo?"))
var3 = float(input("qual o valor do frete?"))

precototal = (var1 * var2) + var3
print(precototal)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:08:07) 
-- CODE:
var1 = float(input("qual a quantidade de jogos?"))
var2 = float(input("qual o valor do jogo?"))
var3 = float(input("qual o valor do frete?"))

precototal = (var1 * var2) + var3
print(precototal)

-- EXECUTION TIME:
0.138257
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
